@@ -24,6 +24,18 @@ class IpgTest < Test::Unit::TestCase
     assert_success response
   end
 
+  def test_successful_transaction_with_single_digit_card
+    @credit_card.month = 3
+    response = stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options)
+    end.check_request do |_endpoint, data, _headers|
+      doc = REXML::Document.new(data)
+      assert_match('03', REXML::XPath.first(doc, '//v1:CreditCardData//v1:ExpMonth').text)
+    end.respond_with(successful_purchase_response)
+
+    assert_success response
+  end
+
   def test_successful_purchase_with_stored_credentials
     stored_credential = {
       initial_transaction: true,
@@ -239,7 +251,20 @@ class IpgTest < Test::Unit::TestCase
 
   def test_successful_verify
     response = stub_comms do
-      @gateway.verify(@credit_card, @options)
+      @gateway.verify(@credit_card)
+    end.check_request do |_endpoint, data, _headers|
+      doc = REXML::Document.new(data)
+      assert_match('032', REXML::XPath.first(doc, '//v1:Payment//v1:Currency').text) if REXML::XPath.first(doc, '//v1:CreditCardTxType//v1:Type')&.text == 'preAuth'
+    end.respond_with(successful_authorize_response, successful_void_response)
+    assert_success response
+  end
+
+  def test_successful_verify_with_currency_code
+    response = stub_comms do
+      @gateway.verify(@credit_card, { currency: 'UYU' })
+    end.check_request do |_endpoint, data, _headers|
+      doc = REXML::Document.new(data)
+      assert_match('858', REXML::XPath.first(doc, '//v1:Payment//v1:Currency').text) if REXML::XPath.first(doc, '//v1:CreditCardTxType//v1:Type')&.text == 'preAuth'
     end.respond_with(successful_authorize_response, successful_void_response)
     assert_success response
   end
